Add RSS feed support
- Add jekyll-feed gem to Gemfile
- Enable jekyll-feed plugin in _config.yml
- Add feed meta tag to head for feed reader discovery
- Add RSS link to footer

RSS feed available at /feed.xml with full post content.

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ baseurl: ""
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title.html
 
+plugins:
+  - jekyll-feed
+
 exclude:
   - Gemfile
   - Gemfile.lock
