Add Obsidian sync script for articles
Create automation to sync articles from Obsidian Links.md to website.

- Add sync-articles.rb script with intelligent title fetching
- Script extracts URLs from Links.md and fetches page titles automatically
- Tries multiple methods: <title>, og:title, twitter:title meta tags
- Handles both plain URLs and markdown link format
- Update README with sync workflow instructions
- Update articles.yml with first synced article

To sync: Just add URLs to ~/Library/Mobile Documents/iCloud~md~obsidian/Documents/evg/Links.md
and run ./sync-articles.rb

--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -1,4 +1,7 @@
-- title: "Example Article"
-  url: "https://example.com"
+# Auto-generated from /Users/eric/Library/Mobile Documents/iCloud~md~obsidian/Documents/evg/Links.md
+# Last updated: 2026-02-14 22:23:06 -0800
+
+- title: "Old Windows 3.x Games on the Internet Archive"
+  url: "https://kottke.org/25/12/old-windows-3x-games-on-the-internet-archive"
   date: 2026-02-14
-  description: "Add your favorite articles here by editing _data/articles.yml"
+
