Update articles from Obsidian - 4 articles

--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -1,7 +1,19 @@
 # Auto-generated from /Users/eric/Library/Mobile Documents/iCloud~md~obsidian/Documents/evg/Links.md
-# Last updated: 2026-02-14 22:24:21 -0800
+# Last updated: 2026-02-14 22:29:55 -0800
 
 - title: "Old Windows 3.x Games on the Internet Archive"
   url: "https://kottke.org/25/12/old-windows-3x-games-on-the-internet-archive"
+  date: 2026-02-14
+
+- title: "Jason Pargin on the Just Coffee, Black meme | Just Coffee, Black"
+  url: "https://knowyourmeme.com/videos/433740-just-coffee-black"
+  date: 2026-02-14
+
+- title: "Pixar&#039;s True Story"
+  url: "https://computerhistory.org/blog/pixars-true-story/"
+  date: 2026-02-14
+
+- title: "Linear sent me down a local-first rabbit hole"
+  url: "https://bytemash.net/posts/i-went-down-the-linear-rabbit-hole/"
   date: 2026-02-14
 
