Clean up footer on all pages
Simplified footer HTML:
- Removed complex xmlns attributes and verbose CC license text
- Changed to cleaner "CC BY-NC-SA 3.0" short form
- Updated HTTP links to HTTPS
- Removed unnecessary div wrappers (.cc-img, .cc-text)
- Single paragraph with inline license badge

Cleaned up footer CSS:
- Center-aligned footer text
- Increased font size from 11px to 12px for better readability
- Added proper line-height (1.8em)
- Simplified responsive behavior
- On mobile: CC badge displays as block above text
- Removed complex positioning and margin rules

The footer is now cleaner, more modern, and easier to read while
maintaining the same licensing information.

--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -1,9 +1,15 @@
 # Auto-generated from /Users/eric/Library/Mobile Documents/iCloud~md~obsidian/Documents/evg/Links.md
-# Last updated: 2026-02-15 14:03:17 -0800
+# Last updated: 2026-02-15 21:02:25 -0800
+
+- title: "IBM is tripling the number of Gen Z entry-level jobs after finding the limits of AI adoption"
+  url: "https://fortune.com/2026/02/13/tech-giant-ibm-tripling-gen-z-entry-level-hiring-according-to-chro-rewriting-jobs-ai-era/"
+  date: 2026-02-15
+  note: "In two years having hired all of entry level engineers will look really smart."
 
 - title: "Inner-platform effect"
   url: "https://en.wikipedia.org/wiki/Inner-platform_effect"
   date: 2026-02-15
+  note: "This is the most frequent time and productivity sand trap in teams at large companies."
 
 - title: "Old Windows 3.x Games on the Internet Archive"
   url: "https://kottke.org/25/12/old-windows-3x-games-on-the-internet-archive"
