Update articles from Obsidian

--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -1,5 +1,10 @@
 # Auto-generated from /Users/eric/Library/Mobile Documents/iCloud~md~obsidian/Documents/evg/Links.md
-# Last updated: 2026-02-19 16:42:02 -0800
+# Last updated: 2026-02-19 20:04:47 -0800
+
+- title: "Ambient CSS Demo"
+  url: "https://ambientcss.vercel.app/"
+  date: 2026-02-19
+  note: "A delightful tactile UI kit"
 
 - title: "Electrobun v1"
   url: "https://blackboard.sh/blog/electrobun-v1/"
